# eval-lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: reproduce-run.md
models/: start-bonsai-server.sh  start-qwen27-server.sh  start-server.sh
scripts/: build_dashboard.py  clean_results.py  dashboard.js  dashboard_api.py  dataset_cli.py  download_bonsai.py  download_qwen27.py  download_qwen36q4.py  download_realworld.py  download_sciq.py  download_uda_qa.py  export_report.py  jsonl_to_promptfoo.py  migrate_results_by_temp.py  prepare_ifeval_promptfoo.py  prepare_samples.py  profile_cli.py  run_all_evals.sh  run_comparable_qwen_portfolio.sh  run_dashboard_eval.py  run_deepeval.py  run_hf_job.py  run_lab.sh  run_portfolio_evals.sh  run_promptfoo_eval.py  run_promptfoo_ifeval.py  serve_dashboard.sh  smoke_bonsai.py  smoke_judge.py  smoke_target.py  stop_model_servers.sh  tools_update.sh
shared/: config.py  env_files.py  eval_runner.py  hf_auth.py  hf_jobs.py
tests/: test_combined_report.py  test_complexity.py  test_config.py  test_dashboard_api.py  test_dashboard_catalog.py  test_dashboard_filters.py  test_dashboard_hf_api.py  test_dashboard_views.py  test_dataset_registry.py  test_env_files.py  test_eval_runner.py  test_hf_import_datasets.py  test_hf_import_ids.py  test_hf_import_models.py  test_hf_jobs.py  test_hf_ports.py  test_intent_matching.py  test_model_endpoint.py  test_model_server.py  test_performance_report.py  test_profiles.py  test_run_hf_job_cli.py  test_run_status.py  test_score_format.py  test_setup_readiness.py
(+87 files in other folders)
