[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmtesting"
version = "0.1.0"
description = "LLM eval lab: RAGAS, DeepEval, and Promptfoo with shareable run profiles"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "datasets>=3.0",
    "pandas>=2.0",
    "ragas>=0.2",
    "deepeval>=2.0",
    "huggingface_hub>=0.26",
    "pyyaml>=6.0",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
